--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Hello, world!</h1>
+    <p>Paragraf 1</p>
+    <p>Paragraf 2</p>
+    <div>
+        <p>Paragraf 3</p>
+    </div>
+    <a href="halaman2.html">Ke Halaman 2</a>
 </body>
 </html>
