perubahan struktur html

--- a/index.html
+++ b/index.html
@@ -6,13 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Belajar DOM</title>
 </head>
+
+<style>
+    * { 
+        border: 2px solid #dedede; 
+        padding: 15px; 
+        margin: 15px; 
+    }
+    html { 
+      margin: 0;
+      padding: 0;
+    }
+    body { 
+      max-width: 600px;
+      margin: 30px auto;
+      font-family: sans-serif;
+      color: #333;
+    }
+</style>
 <body>
-    <h1>Hello, world!</h1>
-    <p>Paragraf 1</p>
-    <p>Paragraf 2</p>
-    <div>
-        <p>Paragraf 3</p>
+    <h1 id="judul">Hello World</h1>
+    <div id="container">
+        <section id="a">
+            <p class="p1">paragraf 1</p>
+            <a href="http://instagram.com/sandhikagalih">Instagram Sandhika Galih</a>
+            <p class="p2">paragraf 2</p>
+            <p class="p3">paragraf 3</p>
+        </section>
+        <section id="b">
+            <p>paragraf 4</p>
+            <ul>
+                <li>item 1</li>
+                <li>item 2</li>
+                <li>item 3</li>
+            </ul>
+        </section>
     </div>
-    <a href="halaman2.html">Ke Halaman 2</a>
+
+<script src="script.js"></script>
 </body>
 </html>
