perubahan dan penambahan javascript di file java

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="container">
         <section id="a">
             <p class="p1">paragraf 1</p>
-            <a href="http://instagram.com/sandhikagalih">Instagram Sandhika Galih</a>
+            <a href="http://instagram.com/rizwangustama">Instagram Sandhika Galih</a>
             <p class="p2">paragraf 2</p>
             <p class="p3">paragraf 3</p>
         </section>
@@ -43,6 +43,6 @@
         </section>
     </div>
 
-<script src="script.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
