--- a/DOM Selector/index.html
+++ b/DOM Selector/index.html
@@ -29,7 +29,7 @@
     <div id="container">
         <section id="a">
             <p class="p1">paragraf 1</p>
-            <a href="http://instagram.com/rizwangustama">Instagram Sandhika Galih</a>
+            <a href="http://instagram.com/rizwangustama">Instagram Rizwan Gustama</a>
             <p class="p2">paragraf 2</p>
             <p class="p3">paragraf 3</p>
         </section>
