--- a/DOM Manipulations/index.html
+++ b/DOM Manipulations/index.html
@@ -32,6 +32,7 @@
             <a href="http://instagram.com/rizwangustama">Instagram Rizwan Gustama</a>
             <p class="p2">paragraf 2</p>
             <p class="p3">paragraf 3</p>
+            <button>Let's Go</button>
         </section>
         <section id="b">
             <p>paragraf 4</p>
