--- a/DOM Manipulations/index.html
+++ b/DOM Manipulations/index.html
@@ -23,6 +23,10 @@
       font-family: sans-serif;
       color: #333;
     }
+
+    .biru-muda {
+        background-color: lightblue;
+    }
 </style>
 <body>
     <h1 id="judul">Hello World</h1>
