--- a/DOM Events/index.html
+++ b/DOM Events/index.html
@@ -24,9 +24,6 @@
       color: #333;
     }
 
-    .biru-muda {
-        background-color: lightblue;
-    }
 </style>
 <body>
     <h1 id="judul">Hello World</h1>
@@ -35,7 +32,7 @@
             <p class="p1">paragraf 1</p>
             <a href="http://instagram.com/rizwangustama">Instagram Rizwan Gustama</a>
             <p class="p2">paragraf 2</p>
-            <p class="p3">paragraf 3</p>
+            <p class="p3" onclick="ubahWarnaP3()">paragraf 3</p>
         </section>
         <section id="b">
             <p>paragraf 4</p>
