--- a/DOM Events/index.html
+++ b/DOM Events/index.html
@@ -24,6 +24,36 @@
       color: #333;
     }
 
+    .keluar:hover, .keluar:focus {
+        cursor: pointer;
+        columns: lightblue;
+    }
+
+    /* tambahkan efek animasi */
+    @-webkit-keyframes animatetop {
+        from {top:-300px; opacity:0}
+        to {top:0; opacity:1}
+    }
+
+    @keyframes animatetop {
+        from {top:-300px; opacity:0}
+        to {top:0; opacity:1}
+    }
+
+    .jwpopup {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        padding-top: 110px;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgb(0,0,0);
+        background-color: rgba(0,0,0,0.7);
+    }
+
 </style>
 <body>
     <h1 id="judul">Hello World</h1>
@@ -41,8 +71,26 @@
                 <li>item 2</li>
                 <li>item 3</li>
             </ul>
+            <input type="text">
+            <button id="popUp"">Submit</button>
+
+            <!-- Popup Box -->
+            <div id="popUpBox" class="jwpopup">
+                <div class="header">
+                    <span class="keluar">x</span>
+                    <h2>Pop Up</h2>
+                </div>
+                <div class="main">
+                    <P>Ini adalah Halaman main</P>
+                </div>
+                <div class="footer">
+                    <p>ini adalah footer</p>
+                </div>
+            </div>
         </section>
     </div>
+
+
 
 <script src="script.js"></script>
 </body>
