--- a/DOM Bermain Dengan Warna/index.html
+++ b/DOM Bermain Dengan Warna/index.html
@@ -27,16 +27,30 @@
     .merah {
         background-color: red;
     }
+
+    .hijau {
+        background-color: green;
+    }
+    .biru {
+        background-color: blue;
+    }
 </style>
 <body>
     <h1 class="h1">Bermain Dengan Warna</h1>
     <button type="button" id="tUbahWarna">ubahWarna</button>
-
+ 
     <br><br>
 
     <input type="range" name="sMerah" min="1" max="255">
-
     <div class="kotak merah"></div>
+
+
+    <input type="range" name="sHijau" min="1" max="255">
+    <div class="kotak hijau"></div>
+
+
+    <input type="range" name="sBiru" min="1" max="255">
+    <div class="kotak biru"></div>
 
     <script src="script.js"></script>
 
