--- a/DOM Manipulasi Node/index.html
+++ b/DOM Manipulasi Node/index.html
@@ -8,6 +8,11 @@
 </head>
 
 <style>
+    
+    html, body {
+        height: 100%;
+    }
+
     * { 
         border: 2px solid #dedede; 
         padding: 15px; 
