--- a/DOM Manipulasi Node/index.html
+++ b/DOM Manipulasi Node/index.html
@@ -52,6 +52,11 @@
         </section>
     </div>
 
+    <div>
+        <ul>
+            <li>Dimana ada kata yang harus di pahami</li>
+        </ul>
+    </div>
 <script src="script.js"></script>
 </body>
 </html>
