--- a/DOM Event Bubbling/index.html
+++ b/DOM Event Bubbling/index.html
@@ -9,31 +9,31 @@
 <div class="container">
 
     <div class="card">
-      <img src="src/img/Poto Rizwan Gustama.png" width="96" height="96">
+      <img src="img/Poto Rizwan Gustama.png" width="96" height="96">
       <span class="nama">Rizwan Gustama</span>
       <span class="telp">08123456789</span>
-      <span class="close">×</span>
+      <a href="" class="close">x</a>
     </div> 
 
     <div class="card">
-        <img src="src/img/Poto Rizwan Gustama.png" width="96" height="96">
+        <img src="img/Poto Rizwan Gustama.png" width="96" height="96">
         <span class="nama">Sirojudin</span>
         <span class="telp">08123456789</span>
-        <span class="close">×</span>
+        <a href="" class="close">x</a>
     </div> 
 
     <div class="card">
-      <img src="src/img/Poto Rizwan Gustama.png" width="96" height="96">
+      <img src="img/Poto Rizwan Gustama.png" width="96" height="96">
       <span class="nama">Saeful Anwar</span>
       <span class="telp">08123456789</span>
-      <span class="close">×</span>
+      <a href="" class="close">x</a>
     </div> 
 
     <div class="card">
-      <img src="src/img/Poto Rizwan Gustama.png" width="96" height="96">
+      <img src="img/Poto Rizwan Gustama.png" width="96" height="96">
       <span class="nama">Ginanjar</span>
       <span class="telp">08123456789</span>
-      <span class="close">×</span>
+      <a href="" class="close">x</a>
     </div> 
 
 </div>
